--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,8 @@
 
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 @import '~@ngx-share/button/themes/default/default-theme';
-
+@import '~quill/dist/quill.snow.css';
+@import "~quill-mention/dist/quill.mention.min.css";
 
 
 html,
