--- a/src/app/modules/home/user-profile/user-posts/user-posts.component.html
+++ b/src/app/modules/home/user-profile/user-posts/user-posts.component.html
@@ -1,5 +1,40 @@
 <div class="row">
-  <div class="col-sm-12 col-md-8">
+  <div class="container">
+    <div class="col-sm-12 col-md-12">
+      <div>
+        <img [src]="previewUrl || '../../../../../assets/images/default-image.jpg'" class="post-image"/>
+      </div>
+      <div class="form-group">
+        <input type="file" name="image" (change)="fileProgress($event)"/>
+      </div>
+      <div class="form-group">
+        <quill-editor
+          [(ngModel)]="postText"
+          [modules]="config"
+          (onContentChanged)="onContentChanged($event)"
+        >
+
+        </quill-editor>
+        <div class="ql-container ql-snow" style="border-width: 0;">
+          <div class="ql-editor" [innerHTML]="byPassedHTMLString">
+          </div>
+        </div>
+        <quill-view-html [content]="postText" theme="snow"></quill-view-html>
+        <!--<label for="postText" class="my-2">Comment your post</label>-->
+        <!--<textarea-->
+        <!--name=""-->
+        <!--id="postText"-->
+        <!--class="form-control"-->
+        <!--[(ngModel)]="postText"></textarea>-->
+      </div>
+      <button class="btn btn-success" (click)="createPost()"> Add Post
+      </button>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-12 col-md-12">
     <app-post
       *ngFor="let post of posts"
       (postDeleted)="postDeleted($event)"
@@ -9,29 +44,6 @@
       [comments]="post.comments"
     >
     </app-post>
-  </div>
-</div>
-
-<div class="row">
-  <div class="container">
-    <div class="col-sm-12 col-md-8">
-      <div>
-        <img [src]="previewUrl || '../../../../../assets/images/default-image.jpg'" class="post-image"/>
-      </div>
-      <div class="form-group">
-        <input type="file" name="image" (change)="fileProgress($event)"/>
-      </div>
-      <div class="form-group">
-        <label for="postText" class="my-2">Comment your post</label>
-        <textarea
-          name=""
-          id="postText"
-          class="form-control"
-          [(ngModel)]="postText"></textarea>
-      </div>
-      <button class="btn btn-success" (click)="createPost()"> Add Post
-      </button>
-    </div>
   </div>
 </div>
 
