--- a/src/app/modules/home/user-profile/user-posts/user-posts.component.scss
+++ b/src/app/modules/home/user-profile/user-posts/user-posts.component.scss
@@ -5,3 +5,11 @@
   object-fit: cover;
 }
 
+
+//.ql-clipboard.cke_editable.cke_editable_inline.cke_contents_ltr.cke_show_borders {
+//  display: none;
+//}
+
+#cke_editor1 {
+  display: none!important;
+}
