--- a/src/app/modules/home/user-profile/user-posts/user-posts.component.html
+++ b/src/app/modules/home/user-profile/user-posts/user-posts.component.html
@@ -8,18 +8,32 @@
         <input type="file" name="image" (change)="fileProgress($event)"/>
       </div>
       <div class="form-group">
-        <quill-editor
-          [(ngModel)]="postText"
-          [modules]="config"
-          (onContentChanged)="onContentChanged($event)"
-        >
 
-        </quill-editor>
-        <div class="ql-container ql-snow" style="border-width: 0;">
-          <div class="ql-editor" [innerHTML]="byPassedHTMLString">
-          </div>
-        </div>
-        <quill-view-html [content]="postText" theme="snow"></quill-view-html>
+
+        <ckeditor [(ngModel)]="mycontent"
+                  #myckeditor="ngModel"
+                  name="myckeditor"
+                  required
+                  [config]="ckeConfig"
+                  debounce="500"
+                  (paste)="onPaste($event)"
+                  (change)="onChange($event)">
+        </ckeditor>
+
+
+        <!--<quill-editor-->
+          <!--[(ngModel)]="postText"-->
+          <!--[modules]="config"-->
+          <!--(onContentChanged)="onContentChanged($event)"-->
+          <!--(onSelectionChanged)="onSelectionChanged($event)"-->
+        <!--&gt;-->
+
+        <!--</quill-editor>-->
+        <!--<div class="ql-container ql-snow" style="border-width: 0;">-->
+          <!--<div class="ql-editor" [innerHTML]="byPassedHTMLString">-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<quill-view-html [content]="postText" theme="snow"></quill-view-html>-->
         <!--<label for="postText" class="my-2">Comment your post</label>-->
         <!--<textarea-->
         <!--name=""-->
